added cucumber-sinatra generated project

--- a/src/ruby/ninjas4hire/gemfile
+++ b/src/ruby/ninjas4hire/gemfile
@@ -2,3 +2,7 @@ source 'http://rubygems.org'
 gem 'sinatra'
 gem 'rack-test'
 gem 'haml'
+gem 'gherkin' , "2.2.9"
+gem 'cucumber'
+gem 'cucumber-sinatra'
+gem 'capybara'
