--- a/src/dotnet/NinjaSurvivalRate/NinjaSurvivalRate.csproj
+++ b/src/dotnet/NinjaSurvivalRate/NinjaSurvivalRate.csproj
@@ -33,11 +33,11 @@
   <ItemGroup>
     <Reference Include="Cuke4Nuke.Framework, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Ruby\lib\ruby\gems\1.8\gems\cuke4nuke-0.3.0\dotnet\Cuke4Nuke.Framework.dll</HintPath>
+      <HintPath>C:\Ruby\lib\ruby\gems\1.8\gems\cuke4nuke-0.3.1\dotnet\Cuke4Nuke.Framework.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework, Version=2.5.3.9345, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\apps\nunit\bin\net-2.0\framework\nunit.framework.dll</HintPath>
+      <HintPath>..\lib\nunit\net-2.0\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\KillerSteps.cs" />
     <Compile Include="src\Ninja.cs" />
     <Compile Include="src\NinjaSteps.cs" />
     <Compile Include="src\Skill.cs" />
@@ -62,6 +63,7 @@
   <ItemGroup>
     <None Include="features\danger_levels.feature" />
     <None Include="features\danger_levels_background.feature" />
+    <None Include="features\killer.feature" />
     <None Include="features\ninja_survival_rate.feature" />
     <None Include="features\ninja_survival_rate_outlines.feature" />
     <None Include="features\ninja_survival_rate_tables.feature" />
