--- a/src/dotnet/NinjaSurvivalRate/NinjaSurvivalRate.csproj
+++ b/src/dotnet/NinjaSurvivalRate/NinjaSurvivalRate.csproj
@@ -54,11 +54,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\ImpactCalculator.cs" />
     <Compile Include="src\KillerSteps.cs" />
     <Compile Include="src\Ninja.cs" />
+    <Compile Include="src\NinjaContext.cs" />
     <Compile Include="src\NinjaSteps.cs" />
     <Compile Include="src\Skill.cs" />
     <Compile Include="src\SkillSteps.cs" />
+    <Compile Include="src\SplitSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="features\danger_levels.feature" />
@@ -67,6 +70,7 @@
     <None Include="features\ninja_survival_rate.feature" />
     <None Include="features\ninja_survival_rate_outlines.feature" />
     <None Include="features\ninja_survival_rate_tables.feature" />
+    <None Include="features\split.feature" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!--START:PostBuildEvent -->
