--- a/src/dotnet/WebNinja/WebNinja/WebNinja.csproj
+++ b/src/dotnet/WebNinja/WebNinja/WebNinja.csproj
@@ -35,6 +35,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Ruby\lib\ruby\gems\1.8\gems\cuke4nuke-0.3.1\dotnet\Cuke4Nuke.Framework.dll</HintPath>
     </Reference>
+    <Reference Include="Ionic.Zip.Reduced, Version=1.9.1.1, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\selenium-2.0b1\Ionic.Zip.Reduced.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=3.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\selenium-2.0b1\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.7.10213, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit\net-2.0\nunit.framework.dll</HintPath>
@@ -59,6 +67,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\selenium-2.0b1\WebDriver.Common.dll</HintPath>
     </Reference>
+    <Reference Include="WebDriver.Firefox, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\selenium-2.0b1\WebDriver.Firefox.dll</HintPath>
+    </Reference>
     <Reference Include="WebDriver.IE, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\selenium-2.0b1\WebDriver.IE.dll</HintPath>
@@ -70,6 +82,10 @@
     <Reference Include="WebDriver.Remote.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\selenium-2.0b1\WebDriver.Remote.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="WebDriverBackedSelenium, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\selenium-2.0b1\WebDriverBackedSelenium.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -88,8 +104,10 @@
     <Compile Include="selenium\ProjectForm.cs" />
     <Compile Include="selenium\ReportsPage.cs" />
     <Compile Include="selenium\Shared.cs" />
+    <Compile Include="webninja\AliveTest.cs" />
     <Compile Include="webninja\AssignedIssuesReport.cs" />
     <Compile Include="webninja\Issue.cs" />
+    <Compile Include="webninja\ReportAssignedStepsTest.cs" />
     <Compile Include="webninja\User.cs" />
     <Compile Include="webninja\UserRepository.cs" />
     <Compile Include="workflow\ProjectWorkflow.cs" />
@@ -97,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="features\reportassigned.feature" />
+    <None Include="features\step_definitions\cucumber.wire" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
