--- a/src/dotnet/WebNinja/WebNinja/WebNinja.csproj
+++ b/src/dotnet/WebNinja/WebNinja/WebNinja.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="features\step_definitions\ReportAssignedSteps.cs" />
+    <Compile Include="features\step_definitions\SmokeTestSteps.cs" />
     <Compile Include="features\step_definitions\TableConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="selenium\AdminPage.cs" />
@@ -115,6 +116,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="features\reportassigned.feature" />
+    <None Include="features\smoketest.feature" />
     <None Include="features\step_definitions\cucumber.wire" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
