--- a/src/dotnet/WebNinja/WatiNinja/WatiNinja.csproj
+++ b/src/dotnet/WebNinja/WatiNinja/WatiNinja.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="watininja\AssignedIssuesReport.cs" />
     <Compile Include="watininja\business\TableConverter.cs" />
     <Compile Include="test\CukeStepsTest.cs" />
     <Compile Include="watininja\Issue.cs" />
@@ -69,21 +70,20 @@
     <Compile Include="watininja\technical\IssueForm.cs" />
     <Compile Include="watininja\technical\IssuePage.cs" />
     <Compile Include="watininja\technical\IssueTable.cs" />
-    <Compile Include="watininja\technical\LogonPage.cs" />
+    <Compile Include="watininja\technical\LogonForm.cs" />
     <Compile Include="watininja\technical\NoSuchElementException.cs" />
     <Compile Include="watininja\technical\Page.cs" />
     <Compile Include="watininja\technical\ProjectForm.cs" />
     <Compile Include="watininja\technical\ReportsPage.cs" />
     <Compile Include="watininja\User.cs" />
     <Compile Include="watininja\UserRepository.cs" />
+    <Compile Include="watininja\workflow\ProjectWorkflow.cs" />
+    <Compile Include="watininja\workflow\UserWorkflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="features\smoketest.feature" />
     <None Include="features\step_definitions\cucumber.wire" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="watininja\workflow\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
