--- a/src/dotnet/WebNinja/WatiNinja/App.config
+++ b/src/dotnet/WebNinja/WatiNinja/App.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+<!--START:apartment -->
   <configSections>
     <sectionGroup name="NUnit">
-      <section name="TestRunner" type="System.Configuration.NameValueSectionHandler"/>
+      <section name="TestRunner" 
+		type="System.Configuration.NameValueSectionHandler"/>
     </sectionGroup>
   </configSections>
   <NUnit>
@@ -11,4 +13,5 @@
       <add key="ApartmentState" value="STA" />
     </TestRunner>
   </NUnit>
+<!--START:apartment -->
 </configuration>
