--- a/src/dotnet/WebNinja/WatiNinja/WatiNinja.csproj
+++ b/src/dotnet/WebNinja/WatiNinja/WatiNinja.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="test\ReportAssignedStepsTest.cs" />
+    <Compile Include="test\SmokeTest.cs" />
     <Compile Include="watininja\AssignedIssuesReport.cs" />
     <Compile Include="watininja\business\ReportAssignedSteps.cs" />
     <Compile Include="watininja\business\TableConverter.cs" />
