--- a/src/dotnet/SpecFlow/NinjaSurvivalRate/NinjaSurvivalRate.csproj
+++ b/src/dotnet/SpecFlow/NinjaSurvivalRate/NinjaSurvivalRate.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BeltLevel.cs" />
     <Compile Include="Features\danger_levels.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -82,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="SkillSteps.cs" />
+    <Compile Include="StepArgumentTransformations\BeltLevelTransformer.cs" />
     <Compile Include="TestExtensions\TableExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
