--- a/src/dotnet/SpecFlow/NinjaSurvivalRate/NinjaSurvivalRate.csproj
+++ b/src/dotnet/SpecFlow/NinjaSurvivalRate/NinjaSurvivalRate.csproj
@@ -46,6 +46,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Features\ninja_survival_rate_with_parameters.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ninja_survival_rate_with_parameters.feature</DependentUpon>
+    </Compile>
     <Compile Include="BeltLevel.cs" />
     <Compile Include="Features\danger_levels.feature.cs">
       <AutoGen>True</AutoGen>
@@ -80,6 +85,7 @@
     <Compile Include="KillerSteps.cs" />
     <Compile Include="Ninja.cs" />
     <Compile Include="NinjaSteps.cs" />
+    <Compile Include="Parameters\NinjaExperience.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Skill.cs" />
     <Compile Include="SkillSteps.cs" />
@@ -110,6 +116,10 @@
     <None Include="Features\ninja_survival_rate_tables.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>ninja_survival_rate_tables.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Features\ninja_survival_rate_with_parameters.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>ninja_survival_rate_with_parameters.feature.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
